k8s/overlays/prod/app-console.deploy.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-console
  namespace: yeboster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-console
  template:
    metadata:
      labels:
        app: app-console
    spec:
      containers:
        - name: app-console
          image: app-image-builder
          command:
            - /bin/sh
            - -c
            - "trap : TERM INT; sleep infinity & wait"
          imagePullPolicy: Always
