k8s/overlays/prod/patch.app.deploy.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
