k8s/overlays/prod/ingress.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: yeboster.me
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: app
                port:
                  number: 4000
